--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": false,
-  "printWidth": 80
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 100
 }
